# bleh

./: Cargo.toml  README.md
migrations/: 20210911021628_add_rrule.sql
src/: commands.rs  dispatch.rs  framework.rs  lib.rs  main.rs  rrules.rs
src/framework/: commands.rs  context.rs
src/handlers/: autojoin.rs  commands.rs  messages.rs  mod.rs
templates/: command_help.html  command_help.txt  group_help.html  group_help.txt
