[package]
name = "bleh"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
envconfig = "0.10.0"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git" }
path_abs = "0.5.1"
time = "0.3.2"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
url = "2.2.2"


[profile.dev.package.backtrace]
opt-level = 3
