[package]
name = "bleh"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambassador = "0.2.1"
askama = "0.10.5"
async-trait = "0.1.51"
chrono = "0.4.19"
color-eyre = "0.5.11"
derivative = "2.2.0"
enum-as-inner = "0.3.3"
envconfig = "0.10.0"
frunk = "0.4.0"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git" }
nom = "7.0.0"
path_abs = "0.5.1"
proxy-enum = "0.3.1"
rrule = "0.5.9"
sqlx = { version = "0.5.7", features = ["sqlite", "runtime-tokio-native-tls"] }
time = "0.3.2"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.28"
tracing-subscriber = "0.2.23"
url = "2.2.2"

[profile.release]
lto = "thin"

[profile.dev.package.backtrace]
opt-level = 3
